--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+       "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@syncfusion/ej2-react-lists": "^18.3.53",
     "antd": "^3.20.7",
-    "antd-img-crop": "^3.13.2",
     "axios": "^0.21.0",
     "customize-cra": "^1.0.0",
     "react": "^17.0.1",
-    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^17.0.1",
-    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
-    "react-select": "^3.1.0"
+    "react-scripts": "^4.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
